data/derived/fa15/progs/unify/prog3758.ml.out
Characters 69-73:
  | VarX			    -> Printf.sprintf ("%s" x);
                                  ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
